tests/smt2/error/assume-interpolant-error.smt2
(declare-const p Bool)
(declare-const q Bool)
(declare-const r Bool)
(assert (! true :named t))
(assert (! (=> p q) :named pq))
(assert (! (=> q r) :named qr))
(define-const nr Bool (not r))
(check-sat-assuming (p (not r)))
(get-interpolants (and t p pq) (and qr (not r)))
(get-interpolants (and t p pq) (and qr))
(check-sat-assuming (p nr t))
(get-interpolants (and p pq t) (and nr))
(get-interpolants (and p pq) (and qr nr))
(get-interpolants (and p pq t) (and qr nr))